--- a/Курсовая.vcxproj.filters
+++ b/Курсовая.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="Storage.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="Case.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
