--- a/Курсовая.vcxproj
+++ b/Курсовая.vcxproj
@@ -142,7 +142,7 @@
     <ClCompile Include="Storage.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Case.h" />
+    <ClInclude Include="MyCase.h" />
     <ClInclude Include="Storage.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
