--- a/Курсовая.vcxproj.filters
+++ b/Курсовая.vcxproj.filters
@@ -26,7 +26,7 @@
     <ClInclude Include="Storage.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="Case.h">
+    <ClInclude Include="MyCase.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
